<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Green Nitrogen</string>
    <string name="tab1">Berita</string>
    <string name="tab2">Promo</string>
    <string name="tab3">Comment Of The Week</string>
    <string name="cd_main_image">main image</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_gPlus">Google+</string>
    <string name="drawer_youtube">YouTube</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">More</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="app_email">dr.m.karthiik@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="message">Do you want to exit?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="bullet">\u2022 </string>
    <string name="no1">1. </string>
    <string name="no2">2. </string>
    <string name="no3">3. </string>
    <string name="no4">4. </string>
    <string name="no5">5. </string>
    <string name="no6">6. </string>
    <string name="no7">7. </string>
    <string name="no8">8. </string>
    <string name="no9">9. </string>
    <string name="no10">10. </string>
    <string name="green_steam_wash">Green Steam Wash</string>
    <string name="testimoni_pelanggan">Testimoni Pelanggan</string>
    <string name="isu_nitrogen_palsu">Isu Nitrogen Palsu</string>
    <string name="green_nitrogen_palsu">Green Nitrogen Palsu</string>
    <string name="submit">Submit</string>
    <string name="merek_kendaraan">Merek Kendaraan</string>
    <string-array name="jenis_kendaraan">
        <item>SUV</item>
        <item>Sedan</item>
        <item>Minibus</item>
        <item>Motor</item>
        <item>Lainnya</item>
    </string-array>
    <string name="no_polisi">No Polisi</string>
    <string name="email">Email</string>
    <string name="no_hp">No HP</string>
    <string name="alamat">Alamat</string>
    <string name="nama">Nama</string>
    <string name="comment">Comment</string>
    <string name="pertanyaan_komen">Apa yang anda ketahui tentang Cuci Mobil Teknologi Uap Panas salah satu produk andalan Green Nitrogen ?</string>
    <string name="steam_wash">Steam Wash</string>
    <string name="judul_steam_wash">Comment Of The Week Green Steam Wash</string>
    <string name="judul_testimoni">Testimoni Pelanggan Green Nitrogen</string>
    <string name="pertanyaan_testimoni">Testimoni anda terhadap Pelayanan dan Produk dari Green Nitrogen</string>
    <string name="testimoni">Testimoni</string>
    <string name="comments_of_the_week_green_nitrogen">Comments Of The Week Green Nitrogen</string>
    <string name="pertanyaan_isu_palsu">Berikan komentar Anda tentang Isu HOAX Nitrogen Palsu?</string>
    <string name="paragraf_1_isu">Dapatkan Gratis e-book buku Angin Perubahan dari Adang Wijaya, Owner dan CEO Green Nitrogen dan Xtravoucher Senilai Rp. 200 Ribu . Pelopor dalam membangun raksasa bisnis dari menjual angin nitrogen dan tambal ban bergaransi di SPBU Pertamina seluruh Indonesia.</string>
    <string name="paragraf_2_isu">Untuk e-book dapat di download di Link yang akan kami kirim melalui Email/SMS, mohon lengkapi data pribadi Anda. Terima kasih.</string>
    <string name="pertanyaan_green_palsu">Merebaknya outlet Green Nitrogen palsu, apakah Anda tahu cara membedakannya? Menurut Anda apa yang menjafi ciri khas outlet Green Nitrogen?</string>
    <string name="green_palsu_paragraf1">Dapatkan Gratis e-book buku Angin Perubahan dari Adang Wijaya, Owner dan CEO Green Nitrogen dan Xtravoucher Senilai Rp. 200 Ribu . Pelopor dalam membangun raksasa bisnis dari menjual angin nitrogen dan tambal ban bergaransi di SPBU Pertamina seluruh Indonesia.</string>
    <string name="green_palsu_paragraf2">Untuk e-book dapat di download di Link yang akan kami kirim melalui Email/SMS, mohon lengkapi data pribadi Anda. Terima kasih.</string>
    <string name="award">Award</string>
    <string name="info">Info</string>
    <string name="garansi">Garansi</string>
    <string name="bisnis_kerja_sama">Bisnis Kerja Sama</string>
    <string name="layanan">Layanan</string>
    <string name="produk_dan_layanan">Produk dan Layanan</string>
    <string name="car_wash">Car Wash</string>
    <string name="profil">Profil</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="unit_kerja_bisnis">Unit Kerja Strategis</string>
    <string name="visi_misi">Visi Misi</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="back_image_button_desc">Back To Main Activity Button</string>
    <string name="hub_form">Anda akan dibalas oleh pihak Green Nitrogen melalui Email</string>
    <string name="pesan">Pesan</string>
    <string name="paragraf_1">      Green Nitrogen merupakan salah satu unit usaha strategis yang menjadi merk andalan (Anchor Brand) dari PT Global Insight Utama yang berfokus kepada layanan prima untuk nitrogen dan tambal ban bergaransi di SPBU Pertamina. Unit usaha ini merupakan mitra bisnis resmi sebagai operator tunggal yang dipercaya oleh Pertamina memberikan layanan nitrogen dan tambal ban. Selain sebagai mitra strategis Pertamina, Green Nitrogen pernah dipercaya oleh Ferrari Indonesia untuk mendukung ajang Ferrari Rally Corso Pilota pada tanggal 14–15 Oktober 2011, dan sampai saat ini masih dipercaya sebagai Official Service Provider di Ferrari Indonesia, Lexus Indonesia, dan Nissan Motor Indonesia. Juga Auto 2000, principal ban Michelin, dan lainnya.</string>
    <string name="paragraf_2">      Beberapa mitra strategis Green Nitrogen yang telah bekerja sama diantaranya adalah Bank Mandiri, BCA, BNI, dan BRI untuk layanan transaksi pembayaran melalui mesin Debit dan Kartu Kredit (khusus untuk BNI); Sosro Indonesia untuk layanan promsi Teh Sosro di beberapa outlet; Adira Insurance dan Adira Finance, serta Politeknik Negeri Malang (Polinema) untuk pembuatan mesin N2 Generator yang penandatanganannya disaksikan oleh Gubernur Jawa Timur yaitu  Bp. DR. Soekarwo. Selain itu sedang dilakukan pembangunan wahana pemeliharaan kendaraan pertama dan terbesar di Indonesia, yaitu Polinema Autopark, yang akan diresmikan oleh Presiden RI.</string>
    <string name="paragraf_3">      Green Nitrogen mengedepankan layanan prima untuk kepuasan mitra bisnis (Pertamina) dan pelanggan (baik pelanggan SPBU dan pelanggan nitrogen).</string>
    <string name="tentang">Tentang</string>
    <string name="visi_1"> Visi, merupakan cita-cita masa depan yang akan dicapai perusahaan. </string>
    <string name="visi_2">Adapun visi yang akan dicapai adalah:</string>
    <string name="visi_3">Menjadi teladan dalam menjalankan bisnis yang beretika.</string>
    <string name="misi_1">Misi, adalah bisnis yang dijalankan untuk mencapai cita-cita yang akan dicapai.</string>
    <string name="misi_2">Adapun misi yang dijalankan adalah:</string>
    <string name="misi_3">1. Memberi pelayanan pengisian nitrogen yang prima di \n \t SPBU Pertamina</string>
    <string name="misi_4">2. Menerapkan sistem bagi hasil yang transparan dan \n \t akuntabel</string>
    <string name="misi_5">3. Membuka peluang kerja  kepada semua kalangan dan \n \t kesempatan berinvestasi kepada siapapun</string>
    <string name="tujuan_1">Tujuan, yaitu tujuan yang akan dicapai adalah </string>
    <string name="tujuan_2">Menjadi perusahaan yang terbesar, terbaik, dan terpercaya dalam memberikan layanan bisnis.</string>
    <string name="nilai_1">Nilai-nilai bisnis yang dianut dalam menjalankan bisnis adalah Jujur, Amanah, Cerdas, dan Transparansi </string>
    <string name="model_1">Model kerja sama bisnis: </string>
    <string name="model_2">1. Terbuka untuk semua kalangan </string>
    <string name="model_3">2. Sistem bagi hasil yang seimbang </string>
    <string name="model_4">3. Silaturahim dan Berjamaah </string>
    <string name="unit_kerja_strategis">Unit Kerja Strategis</string>
    <string name="cuci_mobil_judul">Cuci Mobil Teknologi Uap Panas</string>
    <string name="cuci_mobil_paragraf1">PT Global Insight Utama, kini menghadirkan teknologi cuci mobil mutakhir yang menggunakan teknologi mutkahir uap air panas. Teknologi uap air panas ini merupakan terobosan terbaru yang kami hadirkan untuk pencucian mobil premium.</string>
    <string name="cuci_mobil_paragraf2">Kelebihan dari Steam Wash Uap Panas ini:</string>
    <string name="cuci_mobil_paragraf3">1. Mampu Hilangkan Bakteri dan Virus Penyebab Bau</string>
    <string name="cuci_mobil_paragraf4">2. Lebih Bersih dan Aman</string>
    <string name="cuci_mobil_paragraf5">3. Pencucian Cepat, kurang dari 30 menit</string>
    <string name="cuci_mobil_paragraf6">4. Hemat Energi dan Air</string>
    <string name="cuci_mobil_paragraf7">5. Ramah Lingkungan karena Bebas Detergen</string>
    <string name="cuci_mobil_paragraf8">6. Bebas Becek</string>
    <string name="cuci_mobil_paragraf9">Dengan teknologi ini Anda tak perlu lagi risau soal bakteri maupun virus menempel yang mengakibatkan aroma tak sedap di dalam mobil. Karena dengan suhu uap panas yang diatur antara 120–130 derajat, Steam Wash Uap Panas kami mampu membunuh virus dan bakteri penyebab bau di mobil Anda yang bahkan sulit ditangani oleh salon mobil premium sekalipun.</string>
    <string name="cuci_mobil_paragraf10">Alat kami pun menjamin kebersihan di atas cuci mobil konvesional karena teknologi uap air panas kami mampu menghasilkan tekanan uap antara 8–12 bar. Bahkan kami mampu membersihkan sela-sela mesin mobil Anda dengan aman. Karena teknologi uap panas ini tidak mengeluarkan air yang dapat mengakibatkan korsleting.</string>
    <string name="cuci_mobil_paragraf11">Proses pencucian kami untuk satu unit mobil hanya perlu waktu sekitar 30 menit karena kami tidak perlu melalui proses membasuh dan membilas.</string>
    <string name="cuci_mobil_paragraf12">Steam wash uap panas kami pun tidak menggunakan listrik, melainkan gas. Karena itu teknologi ini tergolong hemat energi. Selain itu, dengan alat ini kami hanya memerlukan 2 liter air untuk mencuci satu unit mobil dan tanpa perlu menggunakan detergen.</string>
    <string name="cuci_mobil_paragraf13">Saat ini, kami memberikan harga promosi untuk paket Clean (Cuci Eksterior, Vakum Interior dan Semir Ban) hanya Rp 50.000,-</string>
    <string name="cuci_mobil_paragraf14">Bagi Anda yang ingin mencoba jasa pencucian mobil kelas premium dan berteknologi mutakhir ini silakan langsung datang ke kantor kami atau calling hotline kami di 0851–0079–2450 untuk panggilan dengan biaya tambahan.</string>
    <string name="message_zoom_touch_expand">Touch photo to expand it.</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="asuransi">Asuransi</string>
</resources>