<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:columnCount="1"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:rowCount="4"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonSteamWash"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:elevation="0dp"
                android:onClick="onClickButton"
                android:text="@string/green_steam_wash" />

            <Button
                android:id="@+id/buttonTestimoni"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/testimoni_pelanggan" />

            <Button
                android:id="@+id/buttonIsuPalsu"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/isu_nitrogen_palsu" />

            <Button
                android:id="@+id/buttonGreenPalsu"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/green_nitrogen_palsu" />
        </GridLayout>


    </ScrollView>

</LinearLayout>